--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cffi==1.14.0
 cryptography==3.3.2
 decorator==4.4.2
 future==0.18.2
-Pillow==7.1.2
+Pillow>=8.1.1
 pycparser==2.20
 python-dotenv==0.13.0
 python-telegram-bot==12.7
