--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+APScheduler==3.6.3
 certifi==2020.4.5.1
-cffi==1.14.0
+cffi==1.15.0
 cryptography==3.3.2
 decorator==4.4.2
 future==0.18.2
-Pillow>=8.1.1
+Pillow==8.4.0
 pycparser==2.20
 python-dotenv==0.13.0
-python-telegram-bot==12.7
+python-telegram-bot>=13.5
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 six==1.14.0
 tornado==6.0.4
+tzdata==2021.4
+tzlocal==4.0.1
