--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ cffi==1.15.0
 cryptography==3.3.2
 decorator==4.4.2
 future==0.18.2
+packaging==21.0
 Pillow==9.0.1
 pycparser==2.20
+pyparsing==2.4.7
 python-dotenv==0.13.0
-python-telegram-bot>=13.5
+python-telegram-bot==13.5
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 six==1.14.0
