--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 APScheduler==3.6.3
+cachetools==4.2.2
 certifi==2020.4.5.1
 cffi==1.15.0
 cryptography==3.3.2
 decorator==4.4.2
 future==0.18.2
 packaging==21.0
-Pillow==9.0.1
+Pillow==9.2.0
 pycparser==2.20
 pyparsing==2.4.7
 python-dotenv==0.13.0
-python-telegram-bot==13.5
+python-telegram-bot==13.14
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 six==1.14.0
-tornado==6.0.4
+tornado==6.1
 tzdata==2021.4
 tzlocal==4.0.1
