--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 APScheduler==3.6.3
 cachetools==4.2.2
 certifi==2022.12.7
@@ -5,15 +6,21 @@ cffi==1.15.0
 cryptography==39.0.1
 decorator==4.4.2
 future==0.18.3
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.4
 packaging==21.0
 Pillow==9.4.0
 pycparser==2.20
 pyparsing==2.4.7
 python-dotenv==0.13.0
-python-telegram-bot==13.14
+python-telegram-bot>=20.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+rfc3986==1.5.0
 six==1.14.0
+sniffio==1.3.0
 tornado==6.1
 tzdata==2021.4
 tzlocal==4.0.1
