--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,3 @@
-anyio==3.6.2
-APScheduler==3.10.1
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-cryptography==40.0.2
-decorator==5.1.1
-future==0.18.3
-h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
-idna==3.4
-packaging==23.1
-Pillow==9.4.0
-pycparser==2.21
-pyparsing==3.0.9
-python-dotenv==1.0.0
+Pillow>=9.4.0
+python-dotenv>=1.0.0
 python-telegram-bot>=20.2
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-rfc3986==1.5.0
-six==1.16.0
-sniffio==1.3.0
-tornado==6.3
-tzdata==2023.3
-tzlocal==4.3
